--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@prisma/adapter-pg": "^7.2.0",
         "@prisma/client": "^7.2.0",
         "dotenv": "^17.2.3",
-        "pg": "^8.16.3"
+        "pg": "^8.16.3",
+        "ts-node": "^10.9.2"
     }
 }
